<resources>
    <string name="app_name">Kakaotalk-replica</string>
    <string name="sender_id">550344309921</string>

    <string name="msg_token_fmt">%s</string>

    <string name="gcm_send_message">MSG_SENT</string>
    <string name="token_error_message">ERR_TOKEN</string>

    <string name="msg_subscribed">Subscribed</string>


    <string name="menu_friends">친구</string>
    <string name="menu_chatting">채팅</string>
    <string name="menu_channel">채널</string>
    <string name="menu_more">더보기</string>

    <string name="btn_text_next">다음</string>
    <string name="btn_text_login">로그인</string>
    <string name="btn_text_skip">건너뛰기</string>
    <string name="btn_text_begin_kakaotalk">카카오톡 시작하기</string>

    <string name="msg_setup_for_input_phone_number">본인 휴대전화번호를 입력해주세요.</string>
    <string name="msg_setup_for_send_verification_number">입력하신 전화번호로 4자리의 인증번호를 보내드립니다.</string>

    <string name="msg_login_incorrect">아이디 혹은 비밀번호가 올바르지 않습니다</string>
    <string name="msg_login_error">로그인 중 오류가 발생했습니다\n잠시후 다시 시도해 주세요</string>
    <string name="msg_for_login">카카오계정으로 로그인하면 \n이전 프로필과 친구목록을 불러올 수 있습니다.</string>
    <string name="msg_for_forgot_ur_info"><u>이메일 또는 비밀번호를 잊으셨나요?</u></string>
    <string name="msg_for_accept">동의합니다.</string>
    <string name="msg_for_accept_and_go">동의하고 계속 진행합니다.</string>
    <string name="msg_for_present_yourself">당신을 표현해 보세요</string>

    <string name="hint_login_for_email_account">카카오계정 (이메일)</string>
    <string name="hint_login_for_password">비밀번호</string>

    <string name="text_terms_of_use"><u>서비스 이용약관</u></string>
    <string name="text_terms_of_privacy"><u>개인정보 수집 및 이용안내</u></string>
    <string name="text_friend_add_auto">자동 친구 추가</string>

    <string name="text_terms_for_use">이용약관이용약관이 들어가는 부분 이용약관이 들어가는 부분 이용약관이 들어가는 부분 이용약관이 들어가는 부분 이용약관이 들어가는 부분</string>
    <string name="text_terms_for_info">개인정보 수집 및 이용 안내가 들어가는 부분 개인정보 수집 및 이용 안내가 들어가는 부분 개인정보 수집 및 이용 안내가 들어가는 부분 개인정보 수집 및 이용 안내가 들어가는 부분</string>
    <string name="text_profile_setting_faa_desc">내 주소록에서 카카오톡을 사용하는 친구를 자동으로\n친구목록에 추가합니다.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
