<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="@dimen/terms_padding_top"
              android:paddingBottom="@dimen/terms_padding_bottom"
              android:paddingLeft="@dimen/terms_padding_left"
              android:paddingRight="@dimen/terms_padding_right"
              android:background="@color/colorBgYellow"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/terms_header_padding_bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_terms_of_use"
            android:textSize="@dimen/terms_text_size"
            android:textColor="@color/colorTextBlack"
            android:gravity="center_vertical"/>

        <ImageView
            android:layout_width="@dimen/terms_arrow_size"
            android:layout_height="@dimen/terms_arrow_size"
            android:src="@drawable/comm_ico_arr_next"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_round_corner_white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="@dimen/terms_cont_text_padding_top"
            android:paddingBottom="@dimen/terms_cont_text_padding_bottom"
            android:paddingLeft="@dimen/terms_cont_text_padding_left"
            android:paddingRight="@dimen/terms_cont_text_padding_right">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_terms_for_use"/>

        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/terms_cont_divider_height"
            android:background="@color/colorGray2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/terms_cont_checkbox_area_height"
            android:paddingLeft="@dimen/terms_cont_text_padding_left"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/cb_activity_terms_use"
                android:layout_width="@dimen/terms_cont_checkbox_size"
                android:layout_height="@dimen/terms_cont_checkbox_size"
                android:padding="2dp"
                android:button="@drawable/custom_checkbox"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/terms_cont_checkbox_text_margin_left"
                android:text="@string/msg_for_accept"
                android:textSize="@dimen/terms_text_size"
                android:textColor="@color/colorTextBlack"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/terms_cont_gap"
        android:paddingBottom="@dimen/terms_header_padding_bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_terms_of_privacy"
            android:textSize="@dimen/terms_text_size"
            android:textColor="@color/colorTextBlack"
            android:gravity="center_vertical"/>

        <ImageView
            android:layout_width="@dimen/terms_arrow_size"
            android:layout_height="@dimen/terms_arrow_size"
            android:src="@drawable/comm_ico_arr_next"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_round_corner_white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="@dimen/terms_cont_text_padding_top"
            android:paddingBottom="@dimen/terms_cont_text_padding_bottom"
            android:paddingLeft="@dimen/terms_cont_text_padding_left"
            android:paddingRight="@dimen/terms_cont_text_padding_right">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_terms_for_info"/>

        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/terms_cont_divider_height"
            android:background="@color/colorGray2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/terms_cont_checkbox_area_height"
            android:paddingLeft="@dimen/terms_cont_text_padding_left"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/cb_activity_terms_privacy"
                android:layout_width="@dimen/terms_cont_checkbox_size"
                android:layout_height="@dimen/terms_cont_checkbox_size"
                android:padding="2dp"
                android:button="@drawable/custom_checkbox"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/terms_cont_checkbox_text_margin_left"
                android:text="@string/msg_for_accept_and_go"
                android:textSize="@dimen/terms_text_size"
                android:textColor="@color/colorTextBlack"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>