<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="@dimen/setup_padding_top"
              android:background="@color/colorBgYellow"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorTextBrown"
        android:textSize="@dimen/setup_text_size_medium"
        android:text="@string/msg_setup_for_input_phone_number"/>

    <!-- country code spinner -->
    <View
        android:layout_width="@dimen/setup_spinner_width"
        android:layout_height="@dimen/setup_view_height"
        android:layout_marginTop="@dimen/setup_spinner_margin_top"
        android:layout_marginBottom="@dimen/setup_spinner_margin_bottom"
        android:background="#fff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/setup_input_margin_bottom"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <kr.latera.kakaotalk_replica.view.EditTextWithClearButton
            android:id="@+id/et_setup_phone_number"
            android:layout_width="@dimen/setup_et_width"
            android:layout_height="@dimen/setup_view_height"
            android:layout_marginTop="@dimen/setup_view_margin"
            android:layout_marginBottom="@dimen/setup_view_margin"
            android:layout_marginLeft="@dimen/setup_view_margin"
            android:layout_marginRight="@dimen/setup_view_margin"
            android:elevation="@dimen/setup_view_elevation"/>

        <Button
            android:id="@+id/btn_setup_next"
            android:layout_width="@dimen/setup_button_next_width"
            android:layout_height="@dimen/setup_view_height"
            android:layout_marginTop="@dimen/setup_view_margin"
            android:layout_marginBottom="@dimen/setup_view_margin"
            android:layout_marginLeft="@dimen/setup_button_next_margin_left"
            android:layout_marginRight="@dimen/setup_view_margin"
            android:background="@drawable/bg_round_corner_brown"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/setup_text_size_medium"
            android:text="@string/btn_text_next"
            android:elevation="@dimen/setup_view_elevation"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/msg_setup_for_send_verification_number"
        android:textSize="@dimen/setup_text_size_small"
        android:textColor="@color/colorTextDarkYellow"/>



</LinearLayout>